# eq-core-dll

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  eq-core-dll-visualstudio2017.sln  eq-core-dll-visualstudio2019.sln  eq-core-dll-visualstudio2022.sln  eq-core-dll.sln
contrib/mini-yaml/examples/: data1.txt
data/macros/: Fish.mac
src/: EQClasses.cpp  EQClasses.h  EQData.h  EQUIStructs.h  ISXEQ-VS2005.vcproj  ISXEQ.vcproj  MQ2AdvDps.cpp  MQ2ChatHook.cpp  MQ2CleanUI.cpp  MQ2CommandAPI.cpp  MQ2Commands.cpp  MQ2Data.cpp  MQ2DataAPI.cpp  MQ2DataTypes.h  MQ2DataVars.cpp  MQ2DetourAPI.cpp  MQ2Globals.cpp  MQ2Globals.h  MQ2Inlines.h  MQ2ItemDisplay.cpp  MQ2Labels.cpp  MQ2Main.cpp  MQ2Main.dep  MQ2Main.dsp  MQ2Main.h  MQ2Main.mak  MQ2Main.vcproj  MQ2MapAPI.cpp  MQ2Pulse.cpp  MQ2Utilities.cpp  MacroQuest.sln  _options.h  core_bazaar.h  core_eqg_load.h  core_init.h  core_item.h  core_luclin_models.h  core_map.h  core_models.h  core_npc.h  (+7 more)
src/ISXEQ/: ISXEQServices.cpp
src/common/: MiscUtils.h
src/dinput8/: AddressLookupTable.h  IClassFactory.h  IDirectInput8A.h  IDirectInput8Hook.h  IDirectInput8W.h  IDirectInputDevice8A.h  IDirectInputDevice8Hook.h  IDirectInputDevice8W.h  IDirectInputEffect.h  dinput8.cpp  dinput8.h  dinput8.vcxproj  dinput8.vcxproj.filters
src/main/: CrashHandler.cpp  MQ2Anonymize.cpp  MQ2CachedBuffs.cpp  MQ2DataContainers.h  MQ2GroundSpawns.cpp  MQ2Main.vcxproj  MQ2Main.vcxproj.filters  MQ2StringDB.cpp
src/main/datatypes/: MQ2DataTypes.cpp  MQ2DataTypes.h  MQ2PluginType.cpp
